--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3>Email</h3>
-                            <a href="/cdn-cgi/l/email-protection#1776647b7e73737e792227272157707a767e7b3974787a"><span class="__cf_email__" data-cfemail="b4d5c7d8ddd0d0ddda81848482f4d3d9d5ddd89ad7dbd9">[email&#160;protected]</span></a>
+                            <a href="asliddin5006@gmail.com"><span class="__cf_email__" data-cfemail="b4d5c7d8ddd0d0ddda81848482f4d3d9d5ddd89ad7dbd9">[email&#160;protected]</span></a>
                         </div>
                     </div>
                     <div class="contact-item">
